# cinema

./: ..gitignore.kate-swp  .env.dev  .env.prod  .env.prod.db  .gitignore  2407cinema.psql  README.md  cinema_db_29_06.psql  cinemadb.psql  docker-compose.prod.yml  docker-compose.yml  dump0807.psql  pyproject.toml  reqirements.txt  requirements.txt
nginx/: nginx.conf
src/: Dockerfile  Dockerfile.prod  requirements.txt
src/admin/: forms.py  models.py  urls.py  utils.py  views.py
src/admin/migrations/: 0001_initial.py
src/admin/templatetags/: template_tags.py
src/app/: context_proccessors.py  forms.py  models.py  translation.py  urls.py  utils.py  views.py
src/app/migrations/: 0001_initial.py  0001_initial_squashed_0041_auto_20210620_1956.py  0002_auto_20210622_0118.py  0002_movie.py  0003_auto_20210529_2044.py  0003_auto_20210624_1208.py  0004_auto_20210529_2139.py  0004_auto_20210624_1210.py  0005_auto_20210530_1322.py  0005_auto_20210703_2043.py  0006_auto_20210530_1411.py  0007_auto_20210601_1855.py  0008_auto_20210601_2134.py  0009_auto_20210601_2232.py  0010_auto_20210602_0040.py  0011_auto_20210602_0108.py  0012_banner.py  0013_auto_20210607_1407.py  0014_alter_bannerpage_rotational_speed.py  0015_auto_20210607_1519.py  0016_auto_20210607_1807.py  0017_auto_20210608_1228.py  0018_mainpage.py  0019_alter_mainpage_seo_text.py  0020_cafebarpage.py  0021_image_url.py  0022_alter_image_url.py  0023_auto_20210611_1024.py  0024_auto_20210611_1148.py  (+8 more)
src/config/: settings.py  urls.py
src/media/: test_email.html
src/users/: forms.py  models.py  utils.py
(+126 files in other folders)
